Wrap NEWS -- history of user-visible changes.

Copyright (C) 1996-2017 Paul J. Lucas.
See the end of the file for license conditions.

* Changes in Wrap 4.11

** Better handling of --comment-chars/-D value.
Wrapc now accepts only punctuation characters for the --comment-chars/-D value.
Duplicated characters may be given, but are ignored.  Whitespace is also
ignored.

* Changes in Wrap 4.10

** Long command-line options.
Both wrap and wrapc now additionally accept long command-line options.

* Changes in Wrap 4.9

** No longer wrapping at hyphen characters within URIs.
An unintended consequence of adding wrapping at hyphen characters in 4.6 is
that URIs containing hyphens are also wrapped which isn't what is usually
wanted.  Wrap and wrapc no longer wrap at hyphen characters within file, FTP,
HTTP, or HTTPS URIs, or within e-mail addresses.

* Changes in Wrap 4.8

** Added ability to specify number of spaces after an end-of-sentence.
Wrap and wrapc now have a -E option that allows the number of spaces after an
end-of-sentence to be specified.

* Changes in Wrap 4.7

** Added better Unicode support.
Wrap now supports all Unicode question and exclamation marks, right quotation
parentheses, and brackets (for end-of-sentence characters) as well as space
characters.

* Changes in Wrap 4.6

** Added ability to wrap as hyphen characters.
Wrap and wrapc can now wrap at hyphen characters.

* Changes in Wrap 4.5

** Now handling HTML embedded in Markdown according to CommonMark.
Wrap and wrapc have changed Markdown support to be more inline with the
CommonMark specification <http://commonmark.org>, chielfly in the way in which
embeded HTML is handled.

** Now allowing ')' for Markdown ordered lists.
Wrap and wrapc now allow ')' as the delimiter for ordered lists.

* Changes in Wrap 4.4

** Added support for COBOL 2002 comments.
Wrapc can now automatically recognize and properly wrap COBOL comments.

* Changes in Wrap 4.3

** Added support for boxed comments.