@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3wrapc\fP 1 "February 2, 2017" "PJL TOOLS"
+.TH \f3wrapc\fP 1 "February 3, 2017" "PJL TOOLS"
 .SH NAME
 wrapc \- comment reformatter
 .SH SYNOPSIS
@@ -350,6 +350,17 @@ to
 .I n
 characters
 (default is 80).
+Alternatively,
+one of
+\f(CWt\fP,
+\f(CWterm\fP,
+or
+\f(CWterminal\fP
+(case-insensitive)
+sets
+.I line-width
+to the width of the controlling terminal window,
+if any.
 .SH EXIT STATUS
 .PD 0
 .IP 0
@@ -358,6 +369,11 @@ Success.
 Command-line usage error.
 .IP 66
 Open file error.
+.IP 69
+A system resource is not available, e.g., a UTF-8 locale.
+.IP 70
+Internal software error.
+(Please report the bug.)
 .IP 71
 System error.
 .IP 73
@@ -365,9 +381,22 @@ Create file error.
 .IP 74
 I/O error.
 .IP 78
-Error in configuration file.
+Configuration file error.
 .PD
 .SH ENVIRONMENT
+.TP
+.B COLUMNS
+The number of columns of the terminal on which
+.B wrapc
+is being run.
+Used to get the terminal's width for the
+.B \-\-width
+or
+.B \-w
+option.
+Takes precedence over the number of columns specified by the
+.B TERM
+variable.
 .TP
 .B HOME
 The user's home directory:
@@ -377,6 +406,19 @@ the home directory is obtained from the password database entry
 for the effective user.
 If that fails,
 no default configuration file is read.
+.TP
+.B TERM
+The type of the terminal on which
+.B wrapc
+is being run.
+Used to get the terminal's width for the
+.B \-\-width
+or
+.B \-w
+option
+(unless
+.B COLUMNS
+is set and exported).
 .SH FILES
 .TP
 .B ~/.wraprc
